# tddd16-lab4

./: .gitmodules  CMakeLists.txt  Makefile  Makefile.dependencies  codegen.cc  main.cc  parser.y
include/: ast.hh  codegen.hh  parser.hh  string.hh  symtab.hh
lib/: ast.cc  codegen.cc  main.cc  parser.y  scanner.l  string.cc  symtab.cc
test/: array_assignment  else_if  empty_function  function_without_declaration  nested_function  recursive_function
test/conditions/: and  complex_condition  equal  greater  greater_or_equal  less  less_or_equal  not  not_equal  or
test/expressions/: addition  array_ref  coerced_expression  complex_expression  division  exponentiation  identifier  integer  multiplication  negation  real  subtraction
